--- a/TETRIS/TETRIS/TETRIS.vcxproj
+++ b/TETRIS/TETRIS/TETRIS.vcxproj
@@ -151,6 +151,9 @@
   <ItemGroup>
     <ClInclude Include="main.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="NOTE.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
