--- a/TETRIS/TETRIS/TETRIS.vcxproj.filters
+++ b/TETRIS/TETRIS/TETRIS.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="NOTE.txt" />
+  </ItemGroup>
 </Project>
