--- a/TETRIS/TETRIS/TETRIS.vcxproj.filters
+++ b/TETRIS/TETRIS/TETRIS.vcxproj.filters
@@ -27,4 +27,21 @@
   <ItemGroup>
     <Text Include="NOTE.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\array.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\block.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\result_3.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\화면구성.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\화면구성_console.png">
+      <Filter>리소스 파일</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
