init default tetris

--- a/TETRIS/TETRIS/TETRIS.vcxproj
+++ b/TETRIS/TETRIS/TETRIS.vcxproj
@@ -146,9 +146,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.c" />
     <ClCompile Include="tetris.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="main.h" />
     <ClInclude Include="tetris.h" />
   </ItemGroup>
   <ItemGroup>
