--- a/TETRIS/TETRIS/TETRIS.vcxproj.filters
+++ b/TETRIS/TETRIS/TETRIS.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="tetris.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tetris.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
